--- a/aboutme.html
+++ b/aboutme.html
@@ -57,29 +57,29 @@
 			
 			<hr />
 			<div>
-				<h2>A Table of Friends</h2>
+				<h2>A Table of Goals</h2>
 				
 					<div>
 						<table style="position:relative;height:80px; width: 300px;border:solid black 1px">
 							<tr>
-								<th style="text-decoration:underline;text-aligh:center;">First Name</th>
-								<th style="text-decoration:underline;text-aligh:center;">Last Name</th>
-								<th style="text-decoration:underline;text-aligh:center;">Rank</th>
+								<th style="text-decoration:underline;text-aligh:center;">Term</th>
+								<th style="text-decoration:underline;text-aligh:center;">Goal</th>
+								<th style="text-decoration:underline;text-aligh:center;">How To Reach</th>
 							</tr>
 							<tr>
-								<td>Aaron</td>
-								<td>Smith</td>
-								<td>2</td>
+								<td>Summer 2019</td>
+								<td>Get an A+ on my Vienna Study Abroad class</td>
+								<td>Go to all excursions, do all assignments on time, go to class as much as possible. </td>
 							</tr>
 							<tr>
-								<td>Mary</td>
-								<td>Mace</td>
-								<td>1</td>
+								<td>Fall 2019</td>
+								<td>Illinois in Washington</td>
+								<td>Apply to a lot of internships during my Summer 2019 break. Get accepted to one.</td>
 							</tr>
 							<tr>
-								<td>Lee</td>
-								<td>Johnson</td>
-								<td>3</td>	
+								<td>Winter 2019</td>
+								<td>España for Fellowship or Guatemala to visit family?</td>
+								<td>Save up lots of money I guess?</td>	
 							</tr>
 						</table>
 					</div>
