--- a/gallery.html
+++ b/gallery.html
@@ -45,13 +45,13 @@
 			<div>
 				<h2>Lists, Lists Everywhere!<h2 />
 				<ol style="list-style-type:upper-roman" >
-				<li>Milk</li>
-				<li>Pop</li>
+				<li>You</li>
+				<li>Got</li>
 				<ol style="list-style-type:lower-roman" >
-					<li>Coke</li>
-					<li>Dr.Pepper</li>
+					<li>This</li>
+					<li>Qween</li>
 				</ol>
-				<li>Tea</li>			
+				<li> <3 👸🏻</li>			
 				<ol />
 			</div>
 			
