--- a/aboutme.html
+++ b/aboutme.html
@@ -43,15 +43,15 @@
 			
 			<hr />
 			<div>
-				<h2>Lists, Lists Everywhere!<h2 />
+				<h2>How to Make This Website Actually Look Great.<h2 />
 				<ol style="list-style-type:upper-roman" >
-				<li>Milk</li>
-				<li>Pop</li>
+				<li>Read</li>
+				<li>Teach yoself</li>
 				<ol style="list-style-type:lower-roman" >
-					<li>Coke</li>
-					<li>Dr.Pepper</li>
+					<li>Call Google?</li>
+					<li>Don't give up</li>
 				</ol>
-				<li>Tea</li>			
+				<li></li>			
 				<ol />
 			</div>
 			
