hope everything's good

--- a/aboutme.html
+++ b/aboutme.html
@@ -32,18 +32,56 @@
 
 		<p>What a loaded question! I'm still trying to figure that out, but let me tell you what I know so far. Hello! My name is Anaelissa. I am a rising Senior at the University 0f Illinois at Urbana-Champaign, and I am studying Political Science. I am new to web development. My goal is to create my own website so that people can know more about me, such as my academic, volunteer, and work experience as well as my traveling adventures. </p>
 			
+		<img class="img-hs" src="image/mocktrial.JPG" alt="mocktrial">
+
 			<hr />
 			
-			<h2>I like Haiku.</h2>
+			<h3>Education</h3>
 			<div id="haiku">
-				<br id="haiku">CSS you make<br />
-				<br id="haiku">All things pretty, yet so painful<br />
-				<br id="haiku">Why must you exist?<br />
+				<br id="haiku">University of Illinois at Urbana-Champaign,
+				Political Science BA and Linguistics minor | May 2020<br />
+				<br id="haiku">Stephen T. Mather High School | June 2016<br />
+				<br id="haiku"> I L L - I N I <br />
 			</div>
 			
 			<hr />
-			<div>
-				<h2>How to Make This Website Actually Look Great.<h2 />
+
+			<h2>Internships</h2>
+			<div id="haiku">
+				<br id="haiku">Vallejo Center for Learning Spanish						February 2019-May 2019 | 
+				| Teaching Assistant Intern — Champaign, IL |
+				| Taught 9 native English speakers how to learn Spanish in private classes with 1-4 students per class, ranging from children to adults |
+				| Learn professional Spanish presentation and writing skills |
+				| Took notes, ask students to conjugate, spell, read, and pronounce Spanish words. |<br />
+				<br id="haiku"><br />
+				<br id="haiku"><br />
+			</div>
+
+			<hr />
+
+			<h3>Skills</h3>
+			<div id="haiku">
+				<br id="haiku">Natural Languages: Spanish and English: Native proficiency – can read, write, and speak my first language ; Chinese: Elementary proficiency<br />
+				<br id="haiku">Computer: Microsoft Office - PowerPoint (Advanced), Excel (Advanced)<br />
+				<br id="haiku">Artifical Languages:R (Intermediate); HTML (Intermediate), CSS (Basic), Python (Basic)<br />
+			</div>
+
+			<hr />
+			
+			<h2>Volunteer Experience</h2>
+			<div id="haiku">
+				<br id="haiku">Alternative Spring Break with University Housing				March 2017 | 
+		 	Student Volunteer — Washington, DC |
+			Food and Friends, DC Central Kitchen, Charlie’s Place, Coalition for the Homeless; prepared, cooked and serve food and dispersed clothing and hygiene products to over 300 homeless or welfare citizens; Walked around DC giving homeless people food.<br />
+				<br id="haiku"><br />
+				<br id="haiku"><br />
+			</div>
+			
+				<div>
+				
+				<hr />
+
+				<h3>How to Make This Website Actually Look Great.<h3 />
 				<ol style="list-style-type:upper-roman" >
 				<li>Read</li>
 				<li>Teach yoself</li>
