--- a/home.html
+++ b/home.html
@@ -31,19 +31,22 @@
 		<h2>My Main Page</h2>
 
 		<p> Hello World! This website is currently under construction. Stay tuned for an awesome stuff! </p>
-			
+
+		<img class="img-vienna" src="img/melk.JPG" alt="melk abbey garden">
+
+
 			<hr />
 			
-			<h2>I like Haiku.</h2>
+		<h2>How to be a healthier person.</h2>
 			<div id="haiku">
-				<br id="haiku">CSS you make<br />
-				<br id="haiku">All things pretty, yet so painful<br />
-				<br id="haiku">Why must you exist?<br />
+				<br id="haiku">Sleep at early times to get along consistent rest. <br />
+				<br id="haiku">Cut toxic people out of your life, like those who talk behind your back, judge your humor, or set you back from reaching emotional and mental success. At the same time, show the people you value and love how much you appreicate them by respecting and helping them at any time.  <br />
+				<br id="haiku">Take a walk to appreciate nature every day. <br />
 			</div>
 			
 			<hr />
 			<div>
-				<h2>Lists, Lists Everywhere!<h2 />
+				<h2>Don't give up on your site! Remember that you built this yourself and that you should be proud!<h2 />
 				<ol style="list-style-type:upper-roman" >
 				<li>You</li>
 				<li>Got</li>
@@ -51,9 +54,8 @@
 					<li>This</li>
 					<li>Qween</li>
 				</ol>
-				<li> <3 👸🏻</li>			
+				<li>❤️👩🏻‍💼👩🏻‍💻👸🏻❤️</li>			
 				<ol />
-			</div>
 			
 			<hr />
 			<div>
