--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
 	</head>
 
  	<body>
- 		<h1>Ana Elissa Cabrera's Website</h1>
+ 		<h1 style="font-family:fantasy; heve ">Ana Elissa Cabrera</h1>
  		<div id="titlebar">
 				<a id="homebutton" class="titlebar" href="home.html">Home</a>
 				<a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
@@ -54,31 +54,7 @@
 			
 			<hr />
 			<div>
-				<h2>A Table of Friends</h2>
 				
-					<div>
-						<table style="position:relative;height:80px; width: 300px;border:solid black 1px">
-							<tr>
-								<th style="text-decoration:underline;text-aligh:center;">First Name</th>
-								<th style="text-decoration:underline;text-aligh:center;">Last Name</th>
-								<th style="text-decoration:underline;text-aligh:center;">Rank</th>
-							</tr>
-							<tr>
-								<td>Aaron</td>
-								<td>Smith</td>
-								<td>2</td>
-							</tr>
-							<tr>
-								<td>Mary</td>
-								<td>Mace</td>
-								<td>1</td>
-							</tr>
-							<tr>
-								<td>Lee</td>
-								<td>Johnson</td>
-								<td>3</td>	
-							</tr>
-						</table>
 					</div>
 					</div>
 				
