--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 
 
  	<body>
- 		<h1>Ana Elissa Cabrera's Website</h1>
+ 		<h1 style="font-family:fantasy; heve ">Ana Elissa Cabrera</h1>
  		<div id="titlebar">
 				<a id="homebutton" class="titlebar" href="home.html">Home</a>
 				<a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
@@ -30,7 +30,7 @@
 			
 		<h2>My Main Page</h2>
 
-		<p> Hello World! This website is currently under construction. Stay tuned for an awesome stuff! </p>
+		<p> Hello World! This website is currently under construction. I am building it from the ground up all by myself! Stay tuned for more awesome stuff! </p>
 
 		<img class="img-vienna" src="img/melk.JPG" alt="melk abbey garden">
 
