--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
 
 
  	<body>
- 		<h1>Ana Elissa Cabrera's Website</h1>
+ 		<h1 style="font-family:fantasy; heve ">Ana Elissa Cabrera</h1>
  		<div id="titlebar">
 				<a id="homebutton" class="titlebar" href="home.html">Home</a>
 				<a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
