--- a/README.html
+++ b/README.html
@@ -1,3 +1,5 @@
+#I am not giving up!
+##anaelissa.info
 <!DOCTYPE html>
 <html>
 
@@ -6,7 +8,7 @@
 	
 		<title>anaelissa.info</title>
 		
-		<link rel="stylesheet" type="text/css" href="homestyle.css"/>
+		<link rel="stylesheet" type="text/css" href="README.css"/>
 
 		<style>
 		 body {
