--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,15 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32"> 
   <h1><b>MY BLOG</b></h1>
-  <p>Welcome to the blog of <span class="w3-tag">unknown</span></p>
+  <p>Welcome to the blog of Ana Elissa <span class="w3-tag">unknown</span></p>
 </header>
+
+<div id="titlebar">
+        <a id="homebutton" class="titlebar" href="home.html">Home</a>
+        <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
+        <a id="blogbutton" class="titlebar" href="blog.html">Blog</a>
+        <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
+    </div>
 
 <!-- Grid -->
 <div class="w3-row">
@@ -34,8 +41,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      <p>Washington, DC Blog Posts</p>
       <div class="w3-row">
         <div class="w3-col m8 s12">
           <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
