--- a/blog.html
+++ b/blog.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-</style>
-<body class="w3-light-grey">
 
-<!-- w3-content defines a container for fixed size centered content, 
-and is wrapped around the whole page content, except for the footer in this example -->
-<div class="w3-content" style="max-width:1400px">
+
+  <head>
+    <meta charset=“utf-8”/>
+  
+    <title>anaelissa.info</title>
+    
+    <link rel="stylesheet" type="text/css" href="homestyle.css"/>
+
+    <style>
+     body {
+        background-color: white;
+        }
+    </style>
+  </head>
+
+  
+
+
+  <body>
+    <h1 style="font-family:fantasy; heve ">Ana Elissa Cabrera</h1>
+    <div id="titlebar">
+        <a id="homebutton" class="titlebar" href="home.html">Home</a>
+        <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
+        <a id="blogbutton" class="titlebar" href="blog.html">Blog</a>
+        <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
+    </div>
 
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32"> 
