--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Trying Fress Open Source COde</title>
+<title>anaelissa.info</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -79,7 +79,11 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
   <p class="w3-center"><em>I love learning new things. </em></p>
-  <p>I'm trying to make my own website and it's a pain.</p>
+  <p>This website is currently under construction. I have built this website from the bottom up all by myself! This is what I have done in the span of three days! I am using all the knowledge I have learned in my CS@Illinois class (CS102: Introduction to Computer Science) that I took Fall 2017. I and am pursuing this as an independent project. 
+    <div>Honestly, I have wanted to give up so many times, but that is never an option! The only way you can get things done is to do it youself. You can't just learn a new skill overnight. It takes practice. I have learned so much, like how to use GitHub, git, how to commit, and other cool HTML/CSS tricks!Stay tuned for more awesome stuff! 👩🏻‍💻</div></p>
+
+    <img class="img-vienna" src="img/melk.JPG" alt="melk abbey garden">
+
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
