--- a/gallery.html
+++ b/gallery.html
@@ -9,11 +9,22 @@
 		
 		<link rel="stylesheet" type="text/css" href="gallerystyle.css"/>
 
-		<style>
-		 body {
-				background-color: white;
-				}
-		</style>
+	<style TYPE="text/css">
+     
+     body {
+      background-image: url("img/peaches.jpg");
+      background-position: right top ;
+      z-index: 2;
+    }
+      b {
+        background: pink;
+        text-align: center;
+      }
+
+      div {
+        background: pink;
+
+    </style>
 	</head>
 
  	<body>
@@ -25,9 +36,9 @@
 				<a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
 		</div>
 			
-		<h2>Gallery</h2>
+		<h2>Art Gallery</h2>
 
-		<p> You can find all the pictures and videos I took while abroad. I have to learn how to do that again because last time I tried something went wrong. </p>
+		<p> Loading art gallery... </p>
 
 			<hr />
 			
