--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,9 @@
   <head>
     <meta charset=“utf-8”/>
   
-    <title>A.E. Poetry</title>
+    <title>A.E. Blog</title>
     
-    <link rel="stylesheet" type="text/css" href="poetrystyle.css"/>
+    <link rel="stylesheet" type="text/css" href="blogstyle.css"/>
 
     <style TYPE="text/css">
      
