--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
     <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black;">
         <a id="homebutton" class="titlebar" href="home.html">Home</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
-        <a id="poetrybutton" class="titlebar" href="poetry.html">Poetry</a>
+        <a id="blogbutton" class="titlebar" href="blog.html">Blog</a>
         <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
     </div>
       
