--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
         <a id="homebutton" class="titlebar" href="home.html">Home</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
         <a id="blogbutton" class="titlebar" href="blog.html">Poetry</a>
-        <a id="gallerybutton" class="titlebar" href="gallery.html">Art Gallery</a>
+        <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
     </div>
 
 <!-- Header -->
