--- a/aboutme.html
+++ b/aboutme.html
@@ -32,12 +32,13 @@
   
 
 
-  <body>
-    <h1 style="font-family:fantasy; heve ">Ana Elissa Cabrera</h1>
-    <div id="titlebar">
+ <body background="img/peaches.jpg">
+
+    <h1 style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
+    <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black;">
         <a id="homebutton" class="titlebar" href="home.html">Home</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
-        <a id="blogbutton" class="titlebar" href="blog.html">Blog</a>
+        <a id="blogbutton" class="titlebar" href="blog.html">Poetry</a>
         <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
     </div>
       
