--- a/gallery.html
+++ b/gallery.html
@@ -27,14 +27,15 @@
     </style>
 	</head>
 
- 	<body>
- 		<h1 style="font-family:fantasy; heve ">Ana Elissa Cabrera</h1>
- 		<div id="titlebar">
-				<a id="homebutton" class="titlebar" href="home.html">Home</a>
-				<a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
-				<a id="blogbutton" class="titlebar" href="blog.html">Blog</a>
-				<a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
-		</div>
+ 	<body background="img/peaches.jpg">
+
+    <h1 style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
+    <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black;">
+        <a id="homebutton" class="titlebar" href="home.html">Home</a>
+        <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
+        <a id="blogbutton" class="titlebar" href="blog.html">Poetry</a>
+        <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
+    </div>
 			
 		<h2>Art Gallery</h2>
 
