--- a/aboutme.html
+++ b/aboutme.html
@@ -120,7 +120,7 @@
               </tr>
               <tr>
                 <td>Summer 2019</td>
-                <td>Get an A+ on my Vienna Study Abroad class</td>
+                <td>Get an A on my Vienna Study Abroad class</td>
                 <td>Go to all excursions, do all assignments on time, go to class as much as possible. </td>
               </tr>
               <tr>
