--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
   
     <title>anaelissa.info</title>
     
-    <link rel="stylesheet" type="text/css" href="aboutmestyle.css"/>
+    <link rel="stylesheet" type="text/css" href="css/aboutmestyle.css"/>
 
    <style TYPE="text/css">
      
