--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
   
     <title>A.E. Blog</title>
     
-    <link rel="stylesheet" type="text/css" href="blogstyle.css"/>
+    <link rel="stylesheet" type="text/css" href="css/blogstyle.css"/>
 
     <style TYPE="text/css">
      
