--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
 	
 		<title>Ana Elissa Cabrera</title>
 		
-		<link rel="stylesheet" type="text/css" href="gallerystyle.css"/>
+		<link rel="stylesheet" type="text/css" href="css/gallerystyle.css"/>
 
 	<style TYPE="text/css">
      
