--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 
     <meta charset=“UTF-8”/>
   
-     <link rel="stylesheet" type="text/css" href="homestyle.css"/>
+     <link rel="stylesheet" type="text/css" href="css/homestyle.css"/>
 
 
     <title>A.E. Cabrera</title>
@@ -38,8 +38,10 @@
     <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black;">
         <a id="homebutton" class="titlebar" href="home.html">Home</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
+        <a id="adventuresbutton" class="titlebar" href="adventures.html">Adventures</a>
         <a id="blogbutton" class="titlebar" href="blog.html">Poetry</a>
         <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
+
     </div>
       
     <h2>Home</h2>
