--- a/home.html
+++ b/home.html
@@ -31,6 +31,7 @@
   </head>
 
 
+<div>
 
   <body background="img/peaches.jpg">
 
@@ -39,11 +40,11 @@
         <a id="homebutton" class="titlebar" href="home.html">Home</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
         <a id="adventuresbutton" class="titlebar" href="adventures.html">Adventures</a>
-        <a id="blogbutton" class="titlebar" href="blog.html">Poetry</a>
+        <a id="blogbutton" class="titlebar" href="poetryart.html">Poetry&Art</a>
         <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
+  </body>    
+</div>
 
-    </div>
-      
     <h2>Home</h2>
 
    <b style="font-size:22px;font;text-align:center;">What if we learned HTML/CSS TOGETHER....hahaha jk</b>
