--- a/arts.html
+++ b/arts.html
@@ -7,7 +7,7 @@
   
     <title>A.E. Blog</title>
     
-    <link rel="stylesheet" type="text/css" href="css/blogstyle.css"/>
+    <link rel="stylesheet" type="text/css" href="css/poetryart.css"/>
 
     <style TYPE="text/css">
      
@@ -30,38 +30,21 @@
 
   
 
-
+<div>
   <body>
     <h1 style="font-family:fantasy; heve ">Ana Elissa Cabrera</h1>
     <div id="titlebar">
         <a id="homebutton" class="titlebar" href="home.html">Home</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
-        <a id="blogbutton" class="titlebar" href="blog.html">Poetry</a>
+        <a id="blogbutton" class="titlebar" href="arts.html">Arts</a>
         <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
     </div>
+  </body>
+</div>
 
-<!-- Header -->
-<header class="w3-container w3-center w3-padding-32"> 
-  <h1><b>Poetry</b></h1>
-  <b>Thoughts loading <span class="w3-tag">unknown</span></b>
-</header>
 
-<!-- Grid -->
-<div class="w3-row">
 
-<!-- Blog entries -->
-<div class="w3-col l8 s12">
-  <!-- Blog entry -->
-  <div class="w3-card-4 w3-margin w3-white">
-    <img src="img/" alt="Nature" style="width:100%">
-    <div class="w3-container">
-      <h3><b>Quarantine Week 2: Zoom Classes Start</b></h3>
-      <h5>Losing faith in Senior Year, <span class="w3-opacity"> March 22, 2020</span></h5>
-    </div>
 
-    </div>
-  </div>
-  <hr>
 
 
 </html>
