--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,8 @@
     <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black;">
         <a id="homebutton" class="titlebar" href="home.html">Home</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
-        <a id="blogbutton" class="titlebar" href="blog.html">Poetry</a>
+         <a id="adventuresbutton" class="titlebar" href="adventures.html">Adventures</a>
+        <a id="blogbutton" class="titlebar" href="arts.html">Arts</a>
         <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
     </div>
 			
