--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
       </div>
 </div>
 
-<div style="background-image: url('img/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px;border-top: 5px solid black;"> 
+<div style="background-image: url('img/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
 </div>
 
 </html>
