--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
         <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
     </div>
 			
-		<h2>Art Gallery</h2>
+		<h1>Gallery</h1>
 
 		<p> Loading art gallery... </p>
 
