--- a/adventures.html
+++ b/adventures.html
@@ -9,7 +9,7 @@
   
      <link rel="stylesheet" type="text/css" href="css/adventures.css"/>
 
-     <title>A.E. Cabrera</title>
+     <title>A.E. Cabrera - Adventures</title>
     
     <style TYPE="text/css">
      
