--- a/arts.html
+++ b/arts.html
@@ -9,7 +9,7 @@
   
      <link rel="stylesheet" type="text/css" href="css/homestyle.css"/>
 
-     <title>A.E. Cabrera</title>
+     <title>A.E. Cabrera - Arts</title>
     
     <style TYPE="text/css">
      
