--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset=“utf-8”/>
 	
-		<title>Ana Elissa Cabrera</title>
+		<title>A.E. Cabrera - Gallery</title>
 		
 		<link rel="stylesheet" type="text/css" href="css/gallerystyle.css"/>
 
