--- a/gallery.html
+++ b/gallery.html
@@ -1,50 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="js">
 
 
-	<head>
-		<meta charset=“utf-8”/>
-	
-		<title>A.E. Cabrera - Gallery</title>
-		
-		<link rel="stylesheet" type="text/css" href="css/gallerystyle.css"/>
 
-	<style TYPE="text/css">
+<head>
+
+    <meta charset=“UTF-8”/>
+  
+     <link rel="stylesheet" type="text/css" href="css/homestyle.css"/>
+
+     <title>A.E. Cabrera - Gallery </title>
+    
+    <style TYPE="text/css">
      
-     body {
-      background-image: url("img/peaches.jpg");
-      background-position: right top ;
-      z-index: 2;
-    }
-      b {
-        background: pink;
-        text-align: center;
+      a {
+        text-decoration: none;
       }
-
-      div {
-        background: pink;
-
     </style>
-	</head>
 
- 	<body background="img/peaches.jpg">
+</head>
 
+<div style="background-image: url('img/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px;">
+
+  <body>
     <h1 style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
     <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black;">
         <a id="homebutton" class="titlebar" href="home.html">Home</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
-         <a id="adventuresbutton" class="titlebar" href="adventures.html">Adventures</a>
+        <a id="adventuresbutton" class="titlebar" href="adventures.html">Adventures</a>
         <a id="blogbutton" class="titlebar" href="arts.html">Arts</a>
-        <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
-    </div>
-			
-		<h1>Gallery</h1>
+        <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a> 
+      </div>  
+  </body>
+</div>
 
-		<p> Loading art gallery... </p>
+<div>
+    <h1>Arts</h1>
 
-			<hr />
-			
-		
+   <p style="font-size:22px;font;text-align:center;">What if we learned HTML/CSS TOGETHER....hahaha jk...unless 😳🍑👉👈</p>
 
+    <img class="img-ae" src="img/peachpj.JPG" alt="peachpj">
+
+  <br > 
+</div>
+
+<hr />
+
+<div>
+    <h2>Don't give up on your site! Remember that you built this yourself and that you should be proud!</h2>
+</div>
+
+<div style="background-image: url('img/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
+</div>
 
 </html>
