--- a/gallery.html
+++ b/gallery.html
@@ -35,11 +35,14 @@
 </div>
 
 <div>
-    <h1>Arts</h1>
+    <h1>Gallery</h1>
 
-   <p style="font-size:22px;font;text-align:center;">What if we learned HTML/CSS TOGETHER....hahaha jk...unless 😳🍑👉👈</p>
-
-    <img class="img-ae" src="img/peachpj.JPG" alt="peachpj">
+    <div>
+    <img class="img-ae" src="img/whitedress.JPG" alt="whitedress">
+    <img class="img-ae" src="img/lastdaypmj.jpg" alt="pmj">
+    <img class="img-ae" src="img/guatekorean.jpg" alt="guatekor">
+    <img class="img-ae" src="img/melk.JPG" alt="austria">
+    <div>
 
   <br > 
 </div>
