--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<div style="background-image: url('img/map.JPEG'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px;">
+<div style="background-image: url('img/lang.JPEG'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px;">
 
   <body>
     <h1 style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
@@ -63,7 +63,7 @@
       </div>
 </div>
 
-<div style="background-image: url('img/map.JPEG'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
+<div style="background-image: url('img/lang.JPEG'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
 </div>
 
 </html>
