--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<div style="background-image: url('img/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px;">
+<div style="background-image: url('img/br/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px;">
 
   <body>
     <h1 style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
@@ -34,10 +34,9 @@
   </body>
 </div>
 
-<div>
     <h1>Gallery</h1>
 
-    <div>
+    <div class=gallery>
     <img class="img-ae" src="img/whitedress.JPG" alt="whitedress">
     <img class="img-ae" src="img/lastdaypmj.jpg" alt="pmj">
     <img class="img-ae" src="img/guatekorean.jpg" alt="guatekor">
@@ -53,7 +52,7 @@
     <h2>Don't give up on your site! Remember that you built this yourself and that you should be proud!</h2>
 </div>
 
-<div style="background-image: url('img/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
+<div style="background-image: url('img/br/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
 </div>
 
 </html>
