--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
 
     <meta charset=“UTF-8”/>
   
-     <link rel="stylesheet" type="text/css" href="css/homestyle.css"/>
+     <link rel="stylesheet" type="text/css" href="css/gallerystyle.css"/>
 
      <title>A.E. Cabrera - Gallery </title>
     
@@ -37,10 +37,17 @@
     <h1>Gallery</h1>
 
     <div class=gallery>
-    <img class="img-ae" src="img/whitedress.JPG" alt="whitedress">
-    <img class="img-ae" src="img/lastdaypmj.jpg" alt="pmj">
-    <img class="img-ae" src="img/guatekorean.jpg" alt="guatekor">
-    <img class="img-ae" src="img/melk.JPG" alt="austria">
+
+    <img class="img-ae" src="img/guatekorean-small.jpg" alt="guate">
+    <img class="img-ae" src="img/melk-small.JPG" alt="austria"> 
+    <img class="img-ae" src="img/whitedress-small.JPG" alt="uiuc">
+    <img class="img-ae" src="img/lastdaypmj-small.jpg" alt="dc">
+   
+   
+
+   
+
+
     <div>
 
   <br > 
