completely changed readme to match home.html

--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
 <div>
     <h1>Welcome!</h1>
 
-   <p style="font-size:22px;font;text-align:center;">Hi! My name is Ana Elissa and this is Week 2 of Quarantine.</p>
+   <p style="font-size:22px;font;text-align:center;">Hi! My name is Ana Elissa and this is Week 15 of Quarantine???</p>
 
   <br > 
 
