removed some unprofesh meme jokes

--- a/arts.html
+++ b/arts.html
@@ -37,7 +37,7 @@
 <div>
     <h1>Arts</h1>
 
-   <p style="font-size:22px;font;text-align:center;">What if we learned HTML/CSS TOGETHER....hahaha jk...unless 😳🍑👉👈</p>
+   <p style="font-size:22px;font;text-align:center;">Under Construction!</p>
 
     <img class="img-ae" src="img/peachpj.JPG" alt="peachpj">
 
