--- a/readme.html
+++ b/readme.html
@@ -17,7 +17,7 @@
       }
 
       body {
-        background-image: url('img/meatun.JPEG');
+        background-image: url('img/br/introbr.JPEG');
         background-repeat: no-repeat;
         background-position: center; 
         z-index: 2;
