--- a/XREADME.html
+++ b/XREADME.html
@@ -9,7 +9,7 @@
   
      <link rel="stylesheet" type="text/css" href="css/README.css"/>
 
-     <title>A.E. Cabrera - Home </title>
+     <title color="white";>A.E. Cabrera - Home </title>
 
     
     <style TYPE="text/css">
@@ -25,7 +25,7 @@
 
 </head>
 
-<div style="background-image: url('img/megradquad.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; ">
+<div style="background-image: url('img/megradquad.jpg'); background-position: bottom ; x-index: 500; background-position: fixed; padding-top: 550px; padding-bottom: 100px; ">
 
   <body>
     <h1 style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
@@ -42,8 +42,8 @@
 <div>
     <h1>Welcome!</h1>
 
-    <img class="img-ae" src="img/profesh.jpg" alt="professional">
-    <img class="img-ae" src="img/profesh.jpg" alt="professional">
+    <img class="img-ae" src="img/profesh.jpg" ALIGN="left" alt="professional">
+    
 
 
    <p style="font-size:22px;font;text-align:center;">Hi! My name is Ana Elissa! I am a recent grad from the University of Illinois at Urbana-Champaign. I majored in political science and minored in linguistics. I am fascinated by the law and human rights. I am seeking professional experience in government relations! This website is to satisfy my eagerness to teach myself cool new things. I am way better at web developmet and coding than last year, when I begun to take it seriously. This is progress! More to come, stay tuned...</p>
