--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
   
      <link rel="stylesheet" type="text/css" href="css/gallerystyle.css"/>
 
-     <title>A.E. Cabrera - Gallery </title>
+     <title>anaelissa.info - Gallery </title>
     
     <style TYPE="text/css">
      
@@ -23,7 +23,7 @@
 <div style="background-image: url('img/br/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px;">
 
   <body>
-    <h1 style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
+    <h1 href="XREADME.html" style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
     <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black;">
         <a id="homebutton" class="titlebar" href="home.html">Home</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
