OMG I MADE MY WEBSITE LOOK SUPER PROFESH AND ILL-INI THEMED!!!!
Lovely

--- a/gallery.html
+++ b/gallery.html
@@ -20,12 +20,12 @@
 
 </head>
 
-<div style="background-image: url('img/br/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px;">
+<div style="background-image: url('img/br/newilogo.jpeg'); background-position: center; z-index: 2; background-position: fixed; padding-top: 100px;">
 
   <body>
     <h1 href="XREADME.html" style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
     <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black;">
-        <a id="homebutton" class="titlebar" href="home.html">Home</a>
+        <a id="homebutton" class="titlebar" href="XREADME.html">Home</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
         <a id="adventuresbutton" class="titlebar" href="adventures.html">Adventures</a>
         <a id="blogbutton" class="titlebar" href="arts.html">Arts</a>
@@ -59,7 +59,7 @@
     <h2>Don't give up on your site! Remember that you built this yourself and that you should be proud!</h2>
 </div>
 
-<div style="background-image: url('img/br/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
+<div style="background-image: url('img/br/newilogo.jpeg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
 </div>
 
 </html>
