--- a/arts.html
+++ b/arts.html
@@ -25,7 +25,7 @@
   <body>
     <h1 style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
     <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black;">
-        <a id="homebutton" class="titlebar" href="home.html">Home</a>
+        <a id="homebutton" class="titlebar" href="XREADME.html">Home</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
         <a id="adventuresbutton" class="titlebar" href="adventures.html">Adventures</a>
         <a id="blogbutton" class="titlebar" href="arts.html">Arts</a>
