rearranged the pics in my site
moved bottom pic from home to left side of about me. moved pic in about me to adventures

--- a/adventures.html
+++ b/adventures.html
@@ -39,6 +39,8 @@
 
    <b style="font-size:22px;font;text-align:center;">I have traveled a lot all across the United States, Guatemala and Austria!</b>
 
+   <img class="img-dc" src="img/meatun.jpg" alt="meUN">
+
   <br > 
 
    <b style="font-size:22px;font;text-align:center;"> Please come back soon for more. </div></b> 
