--- a/adventures.html
+++ b/adventures.html
@@ -30,6 +30,7 @@
         <a id="adventuresbutton" class="titlebar" href="adventures.html">Adventures</a>
         <a id="blogbutton" class="titlebar" href="arts.html">Arts</a>
         <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a> 
+        <a id="contactbutton" class="titlebar" href="contact.html">Contact</a>
       </div>  
   </body>
 </div>
