--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<div style="background-image: url('img/br/newilogo.jpeg'); background-position: center; z-index: 2; background-position: fixed; padding-top: 100px;">
+<div style="background-image: url('img/br/newilogo.jpeg'); background-position: center; z-index: 2; background-position: fixed; padding-top: 50px;">
 
   <body>
     <h1 href="XREADME.html" style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
@@ -29,7 +29,8 @@
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
         <a id="adventuresbutton" class="titlebar" href="adventures.html">Adventures</a>
         <a id="blogbutton" class="titlebar" href="arts.html">Arts</a>
-        <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a> 
+        <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
+        <a id="contactbutton" class="titlebar" href="contact.html">Contact</a>
       </div>  
   </body>
 </div>
