tried to add linkedin link

--- a/XREADME.html
+++ b/XREADME.html
@@ -45,7 +45,15 @@
     
 
 
-   <p style="font-size:22px;font;text-align:center;">Hi! My name is Ana Elissa! I am a recent grad from the University of Illinois at Urbana-Champaign. I majored in political science and minored in linguistics. I am fascinated by the law and human rights. I am seeking professional experience in government relations! This website is to satisfy my eagerness to teach myself cool new things. I am way better at web developmet and coding than last year, when I begun to take it seriously. This is progress! More to come, stay tuned...</p>
+   <p style="font-size:22px;font;text-align:center;">
+   Hi! My name is Ana Elissa, A.E. ! I am a recent grad from the University of Illinois at Urbana-Champaign. I majored in political science and minored in linguistics. I am fascinated by the law, language, human rights, the government and how change happens within systems. I am seeking professional experience in government relations, business management and marketing. I built this website on my own. I'm still eagerly learning how to code to improve my user interface so some pages are under construction. Feel free to connect and contact me on LinkedIn.</p>
+
+   <scrip type="text/javascript" scr="https://platform.linkedin.com/badges/js/profile.js" async defer></scrip>
+   <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="anaelissacabrera">
+
+    <a class="LI-simple-link" href='https://www.linkedin.com/in/aecabreraleon/' imgsrc="img/linkedin.png">LinkedIn</a></div>
+
+    <script type=javascript" scr='https://platform.linkedin.com/badges/js/profile.js' ansync defer {\"localizedFirstName\":\"Anaelissa\",\"localizedLastName\":\"Cabrera\",\"localizedProfiles\":[{\"encodedId\":null,\"vanityName\":\"aecabreraleon\",\"firstName\":\"Anaelissa\",\"lastName\":\"Cabrera\",\"profileUrl\":\"https://www.linkedin.com/in/aecabreraleon\",\"displayLocale\":\"English\",\"locale\":\"en_US\",\"canonicalName\":null}],\"pageKey\":\"profile-badge-create\",\"badgeVersion\":\"v1\",\"jsBeaconUrl\":\"https://www.linkedin.com/analytics/noauthtracker\",\"defaultBadgeType\":null,\"canonicalUrl\":\"https://www.linkedin.com/badges/profile/create?vanityname=aecabreraleon&preferredlocale=en_US\",\"cdnJsPath\":\"https://platform.linkedin.com/badges/js/profile.js\"}"> </script>
 
      
 </div>
