added social media buttons to each page
linked in: href to my linked in account
youtube and insta: visible button but empty, doesnt link to my accounts

--- a/XREADME.html
+++ b/XREADME.html
@@ -3,6 +3,52 @@
 
 <html lang="en" class="js">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<style>
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+    text-align: center;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+  text-align: center;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+  text-align: center;
+}
+
+.fa-instagram {
+background: #f09433; 
+background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+color: white;
+text-align: center;
+
+}
+
+</style>
+
+
+
 
 <head>
 
@@ -48,12 +94,15 @@
    <p style="font-size:22px;font;text-align:center;">
    Hi! My name is Ana Elissa, A.E. ! I am a recent grad from the University of Illinois at Urbana-Champaign. I majored in political science and minored in linguistics. I am fascinated by the law, language, human rights, the government and how change happens within systems. I am seeking professional experience in government relations, business management and marketing. I built this website on my own. I'm still eagerly learning how to code to improve my user interface so some pages are under construction. Feel free to connect and contact me on LinkedIn.</p>
 
-   <scrip type="text/javascript" scr="https://platform.linkedin.com/badges/js/profile.js" async defer></scrip>
-   <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="anaelissacabrera">
+  
 
-    <a class="LI-simple-link" href='https://www.linkedin.com/in/aecabreraleon/' imgsrc="img/linkedin.png">LinkedIn</a></div>
+<hr />
 
-    <script type=javascript" scr='https://platform.linkedin.com/badges/js/profile.js' ansync defer {\"localizedFirstName\":\"Anaelissa\",\"localizedLastName\":\"Cabrera\",\"localizedProfiles\":[{\"encodedId\":null,\"vanityName\":\"aecabreraleon\",\"firstName\":\"Anaelissa\",\"lastName\":\"Cabrera\",\"profileUrl\":\"https://www.linkedin.com/in/aecabreraleon\",\"displayLocale\":\"English\",\"locale\":\"en_US\",\"canonicalName\":null}],\"pageKey\":\"profile-badge-create\",\"badgeVersion\":\"v1\",\"jsBeaconUrl\":\"https://www.linkedin.com/analytics/noauthtracker\",\"defaultBadgeType\":null,\"canonicalUrl\":\"https://www.linkedin.com/badges/profile/create?vanityname=aecabreraleon&preferredlocale=en_US\",\"cdnJsPath\":\"https://platform.linkedin.com/badges/js/profile.js\"}"> </script>
+<div>
+  <a style="position:relative; left:600px" class="fa fa-linkedin" href='https://www.linkedin.com/in/aecabreraleon/'></a>
+  <a style="position:relative; left:600px" href="#" class="fa fa-youtube"></a>
+  <a style="position:relative; left:600px" href="https://www.instagram.com/anaelissacl/" class="fa fa-instagram"></a>
+</div>
 
      
 </div>
