--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,47 @@
 <!DOCTYPE html>
 <html lang="en" class="js">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<style>
+    .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 50%;
+  }
+
+  .fa:hover {
+      opacity: 0.7;
+      text-align: center;
+  }
+
+  .fa-linkedin {
+    background: #007bb5;
+    color: white;
+    text-align: center;
+  }
+
+  .fa-youtube {
+    background: #bb0000;
+    color: white;
+    text-align: center;
+  }
+
+  .fa-instagram {
+  background: #f09433; 
+  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+  background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+  color: white;
+  text-align: center;
+  }
+</style>
 
 <head>
 
@@ -57,7 +97,9 @@
 <hr />
 
 <div>
-    <h2>Don't give up on your site! Remember that you built this yourself and that you should be proud!</h2>
+  <a style="position:relative; left:600px" class="fa fa-linkedin" href='https://www.linkedin.com/in/aecabreraleon/'></a>
+  <a style="position:relative; left:600px" href="#" class="fa fa-youtube"></a>
+  <a style="position:relative; left:600px" href="https://www.instagram.com/anaelissacl/" class="fa fa-instagram"></a>
 </div>
 
 <div style="background-image: url('img/br/newilogo.jpeg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
