on mobile, social media buttons looked very off
removed the  left:600px under in-line style

--- a/aboutme.html
+++ b/aboutme.html
@@ -168,9 +168,9 @@
 <hr />
 
 <div>
-  <a style="position:relative; left:600px" class="fa fa-linkedin" href='https://www.linkedin.com/in/aecabreraleon/'></a>
-  <a style="position:relative; left:600px" href="#" class="fa fa-youtube"></a>
-  <a style="position:relative; left:600px" href="https://www.instagram.com/anaelissacl/" class="fa fa-instagram"></a>
+  <a style="position:relative" class="fa fa-linkedin" href='https://www.linkedin.com/in/aecabreraleon/'></a>
+  <a style="position:relative" href="#" class="fa fa-youtube"></a>
+  <a style="position:relative" href="https://www.instagram.com/anaelissacl/" class="fa fa-instagram"></a>
 </div>
         
 <div style="background-image: url('img/br/newilogo.jpeg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
