--- a/adventures.html
+++ b/adventures.html
@@ -82,8 +82,7 @@
 <div>
     <h1>Adventures</h1>
 
-   <b style="font-size:22px;font;text-align:center;">I have traveled a lot all across the United States, Guatemala and Austria!</b>
-
+  
    <img class="img-dc" src="img/meatun.jpg" alt="meUN">
 
   <br > 
@@ -94,19 +93,14 @@
 
       <hr />
       
-    <h2>How to step outsisde your comfort zone and embark in a journey alone.</h2>
-      <div id="haiku">
-        <br id="haiku">BRB <br />
-        <br id="haiku">Website in Progress<br />
-        <br id="haiku">Don't forget to take a deep breath. Quarantine is very difficult and you are not alone, although sometimes it might feel like it. <br />
-      </div>
+  
       
-      <hr />
+<hr />
 
 <div>
-  <a style="position:relative; left:600px" class="fa fa-linkedin" href='https://www.linkedin.com/in/aecabreraleon/'></a>
-  <a style="position:relative; left:600px" href="#" class="fa fa-youtube"></a>
-  <a style="position:relative; left:600px" href="https://www.instagram.com/anaelissacl/" class="fa fa-instagram"></a>
+  <a style="position:relative" class="fa fa-linkedin" href='https://www.linkedin.com/in/aecabreraleon/'></a>
+  <a style="position:relative" href="#" class="fa fa-youtube"></a>
+  <a style="position:relative" href="https://www.instagram.com/anaelissacl/" class="fa fa-instagram"></a>
 </div>
 
 
