idk what this was for but i have no choice but to commit

--- a/XREADME.html
+++ b/XREADME.html
@@ -95,15 +95,13 @@ text-align: center;
    Hi! My name is Ana Elissa, A.E. ! I am a recent grad from the University of Illinois at Urbana-Champaign. I majored in political science and minored in linguistics. I am fascinated by the law, language, human rights, the government and how change happens within systems. I am seeking professional experience in government relations, business management and marketing. I built this website on my own. I'm still eagerly learning how to code to improve my user interface so some pages are under construction. Feel free to connect and contact me on LinkedIn.</p>
 
   
-
 <hr />
 
 <div>
-  <a style="position:relative; left:600px" class="fa fa-linkedin" href='https://www.linkedin.com/in/aecabreraleon/'></a>
-  <a style="position:relative; left:600px" href="#" class="fa fa-youtube"></a>
-  <a style="position:relative; left:600px" href="https://www.instagram.com/anaelissacl/" class="fa fa-instagram"></a>
+  <a style="position:relative" class="fa fa-linkedin" href='https://www.linkedin.com/in/aecabreraleon/'></a>
+  <a style="position:relative" href="#" class="fa fa-youtube"></a>
+  <a style="position:relative" href="https://www.instagram.com/anaelissacl/" class="fa fa-instagram"></a>
 </div>
-
      
 </div>
 
